Ensure caution icon is always at the top-right of the input.
Avoids the icon overflowing the input when the label is too large.

--- a/src/components/input/input.css
+++ b/src/components/input/input.css
@@ -23,7 +23,7 @@
   font-size: var(--mavenlink-type-base-size);
   height: 32px;
   margin: 0;
-  padding: 6px var(--spacing-medium) 7px;
+  padding: 6px var(--spacing-x-large) 7px var(--spacing-medium);
 }
 
 .input::placeholder {
@@ -32,11 +32,10 @@
 
 .invalid-icon {
   box-sizing: border-box;
-  height: 100%;
   pointer-events: none;
   position: absolute;
-  right: 0;
-  top: 0;
+  right: 6px;
+  top: 6px;
 }
 
 .invalid-input {
